- fix for logo alignment in styles

--- a/source/css/toolkit-unprefixed.css
+++ b/source/css/toolkit-unprefixed.css
@@ -10276,6 +10276,11 @@ Brick with grid with 3 columns containing editable for:
   }
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .brand-logo {
+    margin: 0 auto 0 0;
+  }
+}
 .main-nav {
   position: absolute;
   top: 3.5625rem;
